# ramenTonCodeProjectOne

./: .gitignore
apps/backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/routes/: algorithms.py  external_data.py  health.py  items.py
apps/backend/app/core/: config.py  constants.py  logging.py  security.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/db/models/: calculation_result.py  external_source.py  item.py
apps/backend/app/services/external_api/: client.py  mapper.py  sync_service.py
apps/backend/tests/: README.md
apps/frontend/: Dockerfile  README.md
infra/helm/backend/: Chart.yaml
infra/helm/backend/templates/: README.md
infra/helm/charts/: README.md
infra/helm/database/: Chart.yaml  values.yaml
infra/helm/database/templates/: README.md
infra/helm/frontend/: Chart.yaml
infra/helm/frontend/templates/: README.md
infra/helm/platform/: Chart.yaml
infra/helm/platform/templates/: README.md
infra/k8s/base/: README.md
infra/k8s/namespaces/: README.md
infra/k8s/overlays/dev/: README.md
infra/k8s/overlays/prod/: README.md
infra/k8s/overlays/staging/: README.md
